# torch-data-bigquery

./: LICENSE.txt  README.md  pyproject.toml
src/torch_data_bigquery/: __init__.py
src/torch_data_bigquery/dataset/: query.py  storage.py
tests/: __init__.py  test_query_dataset.py  test_storage_dataset.py
